# slackfastapi

./: .env  .env.example  .flake8  .gitignore  .gitlab-ci.txt  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  alem.bat  alembic.ini  jinja_processing.py  pyproject.toml
.gitlab/agents/gitlab-agent/: config.txt  config.yaml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.stage.yml  docker-compose.yml  monitoring-do.yml  monitoring-yc.yml  monitoring.yml
deploy/kube/: app.yml  db.yml  namespace.yml  rabbit.yml  test.yml
deploy/kube/templates/: app.yml.j2  db.yml.j2
slack_fastapi/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
slack_fastapi/db/: base.py  config.py  utils.py
slack_fastapi/db/dao/: dummy_dao.py  tokens_dao.py  users_dao.py  videos_dao.py
slack_fastapi/db/migrations/: env.py
slack_fastapi/db/migrations/versions/: 2022-10-12-18-18_960f5b96093f.py  2022-10-16-20-00_3d8ba25783a7.py  2022-10-21-23-00_f3dc7e8a9d3a.py  2022-10-25-18-10_b685184f05d8.py  2022-10-25-18-15_1dd249a2747a.py  2023-06-29-00-14_427f08d15923.py  2023-06-29-01-28_3c06a9654a63.py  2023-07-24-11-09_7ccd509f61fc.py  2023-07-24-11-12_5f8f1606eb3c.py
slack_fastapi/db/models/: __init__.py  clip_model.py  dummy_model.py  token_model.py  user_model.py  video_model.py  video_properties_model.py
slack_fastapi/logger/: schema.py  services.py
slack_fastapi/services/: __init__.py  roles.py  token_handler.py
slack_fastapi/tests/: __init__.py  test_dummy.py
slack_fastapi/web/: __init__.py  application.py  lifetime.py
slack_fastapi/web/api/: __init__.py  router.py
slack_fastapi/web/api/auth/: __init__.py  helpers.py  responses.py  schema.py  services.py  views.py
slack_fastapi/web/api/dummy/: __init__.py  views.py
slack_fastapi/web/api/echo/: __init__.py  views.py
slack_fastapi/web/api/generics/: schemas.py  services.py
slack_fastapi/web/api/monitoring/: __init__.py  health_router.py  views.py
slack_fastapi/web/api/user/: __init__.py  (+3 more)
slackcutter/: __init__.py  config.py  core.py  jobs.py
trained_models/: RanFor_Drone View.joblib  RanFor_Projects.joblib  readme.txt
(+4 files in other folders)
